Gray-Space/src/objects/GS_Comment__c.object
<CustomObject>
    <fields>
        <fullName>GS_Content__c</fullName>
        <label>Content</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GS_ProductId__c</fullName>
        <label>ProductId</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GS_Rate__c</fullName>
        <label>Rate</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GS_User__c</fullName>
        <label>User</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Comment</label>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>Comment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Rate_Max_values</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
   GS_Rate__c &gt; 5
  ,
   GS_Rate__c &lt; 1)</errorConditionFormula>
        <errorDisplayField>GS_Rate__c</errorDisplayField>
        <errorMessage>Rate has to be between 0 and 10</errorMessage>
    </validationRules>
</CustomObject>